# ORIN

./: .env.example  .gitignore  .gitleaksignore  .orin.pids  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE.md  ENVIRONMENT_SETUP.md  MYSQL_MIGRATION.md  MYSQL_SETUP.md  README.md  REFACTOR_PLAN.md  SECURITY.md  SUPPORT.md  TODO.md  TOKEN_UX_IMPROVEMENT.md  agent.md  code-audit-report-detailed.md  code-audit-report.md  coverage-baseline.json  deploy.sh  deploy_ubuntu.sh  docker-compose.dev.yml  docker-compose.yml  manage.sh  nginx.conf  start_orin.bat  test-mcp-api.sh  verify-frontend-integration.sh  verify-p0-fixes.sh
.agent/: api-retry-fix.md  refresh-issue-diagnosis.md  style-fix-plan.md  style-fix-report.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docker/: Dockerfile.ai-engine  Dockerfile.backend  nginx.conf  orin.conf
docs/: AI引擎耗时分段统计.md  API文档.md  API调用示例.md  DSL节点规范.md  E1.4-智能体模块已验收能力清单.md  E2.3-知识图谱闭环范围核对.md  E2.4-知识库模块能力边界与前置条件.md  F1.4-测试失败排障说明.md  F2.1-AI引擎测试说明.md  F4.1-三端最小检查命令.md  F4.2-统一本地检查入口.md  F4.4-失败日志排障说明.md  F5.1-AgentWorkspace知识库文件过滤检查手册.md  F5.2-AgentWorkspace知识库文件过滤实现手册.md  Gateway-MVP-开发方向.md  H1.1-敏感配置和默认值风险梳理.md  H2.1-权限边界复核.md  H2.2-权限一致性复核.md  I1.2-部署前检查清单.md  OCR_ASR降级处理.md  ORIN开发Agent执行说明.md  ORIN统一开发总计划.md  README.md  Workflow协作不稳定节点清单.md  Workflow样例.md  agent-health-monitoring.md  frontend-business-ui.md  implementation_step2_chunking.md  mcp-client-setup.md  (+57 more)
orin-ai-engine/: .coverage  .dockerignore  .env.example  coverage.xml  pyproject.toml  requirements.txt
orin-ai-engine/app/: main.py
orin-ai-engine/app/api/: collaboration.py  mcp.py  playground_runtime.py  workflow.py
orin-ai-engine/app/core/: collab_state.py  config.py  context_manager.py  logging_filter.py  logging_formatter.py  otel_setup.py  shared_memory.py  trace_context.py  trace_httpx.py  trace_middleware.py  tracing.py  w3c_trace.py
orin-ai-engine/app/engine/: collaboration_executor.py  executor.py  mcp_client_manager.py  mq_producer.py  mq_worker.py  task_runtime.py
orin-ai-engine/app/engine/collaboration_langgraph/: __init__.py  checkpointer.py  graph.py  nodes.py  state.py  worker.py
orin-ai-engine/app/engine/handlers/: base.py  code.py  collaboration.py  data_processing.py  interaction.py  llm.py  logic.py  standard.py  tools.py  variable_assigner.py
orin-ai-engine/app/models/: collaboration.py  workflow.py
orin-ai-engine/tests/: conftest.py  test_collab_state.py  test_collaboration_executor.py  test_collaboration_fallback.py  test_config.py  test_executor.py  test_handlers.py  test_llm_handler.py  test_logging_filter.py  test_logging_formatter.py  test_mcp_client_manager.py  test_mq_worker.py  test_mq_worker_trace.py  test_otel_setup.py  test_otel_z_bridge_5b.py  test_playground_runtime.py  test_stability.py  test_task_runtime.py  test_trace_context.py  test_trace_httpx.py  test_trace_middleware.py  test_w3c_trace.py  test_workflow_contract.py
orin-ai-engine/tests/e2e/: test_orin_mcp_streamable_http.py
orin-mcp-bridge/: README.md  pyproject.toml
orin-mcp-bridge/orin_mcp_bridge/: __init__.py  __main__.py  bridge.py
orin-mcp-bridge/tests/: __init__.py  test_bridge.py
(+1541 files in other folders)
