[tool.poetry]
name = "orin-ai-engine"
version = "0.1.0"
description = "Python AI Microservice for ORIN Workflow Execution"
authors = ["Adlin <adlin@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = ">=0.31.1,<0.32.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
httpx = "^0.27.1"
openai = "^1.0.0"
RestrictedPython = "^5.0"
aio-pika = "^9.0.0"
redis = "^5.0.0"
langgraph = "^0.2.0"
langchain-core = "^0.3.0"
jinja2 = "^3.1.0"
mcp = "1.27.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "5.0.0"
black = ">=24.1,<27.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
