[project]
name = "orin-mcp-bridge"
version = "0.1.0"
description = "Claude Desktop stdio bridge for ORIN MCP Streamable HTTP"
requires-python = ">=3.11"
dependencies = [
    "mcp==1.27.1",
]

[project.scripts]
orin-mcp-bridge = "orin_mcp_bridge.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

